tests/snapshots/cli__follow_auto@hyperconfig.snap
---
source: tests/cli.rs
info:
  program: flake-edit
  args:
    - "--flake"
    - "[FIXTURES]/hyperconfig.flake.nix"
    - "--lock-file"
    - "[FIXTURES]/hyperconfig.flake.lock"
    - "--diff"
    - follow
    - "--auto"
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
--- original
+++ modified
@@ -20,15 +20,27 @@
     nixos-hardware.url = "github:nixos/nixos-hardware";

     nil.url = "github:oxalica/nil";
+    nil.inputs.nixpkgs.follows = "nixpkgs";

     nix.url = "https://flakehub.com/f/NixOS/nix/2.*.*.tar.gz";
+    nix.inputs.flake-compat.follows = "flake-compat";
+    nix.inputs.flake-parts.follows = "flake-parts";
+    nix.inputs.nixpkgs.follows = "nixpkgs";
     nix-lazy.url = "github:edolstra/nix/lazy-trees";
+    nix-lazy.inputs.flake-compat.follows = "flake-compat";
+    nix-lazy.inputs.flake-parts.follows = "flake-parts";
+    nix-lazy.inputs.nixpkgs.follows = "nixpkgs";
     nix-multi.url = "git+https://github.com/DeterminateSystems/nix-src?&ref=multithreaded-eval&shallow=1";
+    nix-multi.inputs.flake-compat.follows = "flake-compat";
+    nix-multi.inputs.flake-parts.follows = "flake-parts";
+    nix-multi.inputs.nixpkgs.follows = "nixpkgs";

     retiolum.url = "github:mic92/retiolum";

     clan-core.url = "git+https://git.clan.lol/clan/clan-core";
     clan-core.inputs.nixpkgs.follows = "nixpkgs";
+    clan-core.inputs.disko.follows = "disko";
+    clan-core.inputs.flake-parts.follows = "flake-parts";

     disko.url = "github:nix-community/disko";
     disko.inputs.nixpkgs.follows = "nixpkgs";
@@ -37,6 +49,7 @@

     envfs.url = "github:Mic92/envfs";
     envfs.inputs.nixpkgs.follows = "nixpkgs";
+    envfs.inputs.flake-parts.follows = "flake-parts";

     nix-heuristic-gc.url = "github:risicle/nix-heuristic-gc";
     nix-heuristic-gc.inputs.nixpkgs.follows = "nixpkgs";
@@ -46,15 +59,19 @@

     hyprspace.url = "github:hyprspace/hyprspace";
     hyprspace.inputs.nixpkgs.follows = "nixpkgs";
+    hyprspace.inputs.flake-parts.follows = "flake-parts";

     nixvim.url = "github:nix-community/nixvim";
     nixvim.inputs.nixpkgs.follows = "nixpkgs";
+    nixvim.inputs.flake-parts.follows = "flake-parts";

     buildbot-nix.url = "github:DavHau/buildbot-nix/anon-control";
     buildbot-nix.inputs.nixpkgs.follows = "nixpkgs";
+    buildbot-nix.inputs.flake-parts.follows = "flake-parts";

     stylix.url = "github:nix-community/stylix";
     stylix.inputs.nixpkgs.follows = "nixpkgs";
+    stylix.inputs.flake-parts.follows = "flake-parts";

     easytier.url = "github:EasyTier/EasyTier";
     easytier.flake = false;

----- stderr -----
